scripts/conf/iptables/rules.v4
# Generated by iptables-save v1.8.4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:305]
:POSTROUTING ACCEPT [2:167]
-A POSTROUTING -j MASQUERADE
COMMIT

# Generated by iptables-save v1.8.4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [35:2452]
:MISTBORN_DOCKER_INPUT - [0:0]
:MISTBORN_LOG_DROP - [0:0]
:MISTBORN_WIREGUARD_FORWARD - [0:0]
:MISTBORN_WIREGUARD_INPUT - [0:0]
:MISTBORN_WIREGUARD_OUTPUT - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j MISTBORN_DOCKER_INPUT
-A INPUT -j MISTBORN_WIREGUARD_INPUT
-A INPUT -j MISTBORN_LOG_DROP
-A FORWARD -j MISTBORN_WIREGUARD_FORWARD
-A OUTPUT -j MISTBORN_WIREGUARD_OUTPUT
-A MISTBORN_DOCKER_INPUT -i br-+ -j ACCEPT
-A MISTBORN_LOG_DROP -m limit --limit 6/min -j LOG --log-prefix "[IPTables-Dropped]: "
-A MISTBORN_LOG_DROP -j DROP
COMMIT
